--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,11 @@
 {
   "version": 2,
-  "functions": {
-    "api/*.php": {
-      "runtime": "@vercel/php@0.6.0"
+  "builds": [
+    {
+      "src": "index.php",
+      "use": "@vercel/php"
     }
-  },
+  ],
   "routes": [
     {
       "src": "/(.*)",
